--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/wassim-bouchiha" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/wassimus1993" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
+          <a href="https://www.instagram.com/wassim.b/?hl=fr" target="_blank">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/profile.php?id=100014084058776" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
