--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <span class="text-primary">Bouchiha</span>
         </h1>
         <div class="subheading mb-5">Arabian Ranches 1, Palmera 3, Street 2 Villa 2 · DUBAÏ · (058) 515-7693 ·
-          <a href="mailto:name@email.com">wassim.bouchiha@email.com</a>
+          <a href="mailto:wassim.bouchiha@gmail.com">wassim.bouchiha@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Master’s Degree in Electronic Systems and Industrial IT graduate with experience in Infrastructure (Power and Railways). Creative and resourceful Engineer, with interest and knowledge in substations, power systems, HV/MV switchgear, electrical distribution and management of railways projects. Work closely with other team members in a multi-discipline project delivery environment.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/wassim-bouchiha" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -95,45 +95,115 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Assistant General Manager and Cross Selling Intern </h3>
+            <div class="subheading mb-3">Bosch</div>
+            <p>Responsible to support the executive management of Bosch Middle East and to coordinate all the aspects related to the cross-selling activities of the Bosch Group in the Middle East.</p>
+            <p><strong>Responsibilities</strong></p>
+            <ul>
+              <li>Support daily General Manager Assistant operations</li>
+              <li>Support the preparation and organization of meetings and events related to the General Manger and to our Cross Selling department (e.g. fairs, internal meetings), as well as visits from Bosch top-management or external delegations</li>
+              <li>Facilitate the coordination between different business divisions in the projects market, in order to generate cross-divisional synergies leading to additional sales</li>
+              <li>Support the Cross Selling Coordinator in maintaining a close look on running cross-divisional projects in the construction industry</li>
+              <li>Maintain the cross selling project database</li>
+              <li>Maintain Bosch intranet pages and regularly update/generate new contents</li>
+              <li>Support in updating country and market studies</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">September 2017 - April 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Substation Engineer / Application Developer </h3>
+            <div class="subheading mb-3">The National Office of Electricity and Drinking Water - Electricity Branch</div>
+            <p>Analyze service quality and deﬁne action plans to improve operation modes and the efﬁciency of the substations maintenance belonging to the Operating and Distribution Department of Oujda.</p>
+            <p><strong>Responsibilities</strong></p>
+            <ul>
+              <li>Conduct diagnosis and analyze of all substations incidents for a six year period (2011-2016)</li>
+              <li>Evaluate and improve substations operating and maintenance methods</li>
+            </ul>
+            <p><strong>Achievements</strong></p>
+            <ul>
+              <li>Dimensioned 22Kv busbars to handle 17 MV cells and resist to electrical and mechanical stress</li>
+              <li>Conducted various electrical studies such as load ﬂow, voltage drop, short-circuit, protective relay settings, documented the results and made recommendations </li>
+              <li>Developed a Windows Application using VB .NET to: </li>
+              <ul>
+                <li>Evaluate various short-circuit currents affecting 13 distribution substations and simulate defaults</li>
+                <li> Set precise relays protection settings for power transformers, switchgear of 60Kv and 22Kv</li>
+              </ul>
+              <li>Programmed a maintenance management application using VBA and MS Access that:</li>
+              <ul>
+                <li> Consolidate substations and equipment database</li>
+                <li>Track maintenance work history and state of substations equipment</li>
+                <li>Program systematic visits for maintenance / Display and print reports</li>
+              </ul>
+            </ul>
+
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">September 2017 - April 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Automation Engineer</h3>
+            <div class="subheading mb-3">Coca Cola / Atlas Bottling Company</div>
+            <p>Design and implement a supervision application for the glass line ﬁll valve.</p>
+            <p><strong>Responsibilities</strong></p>
+            <ul>
+              <li>Visualize in Real-Time the machine’s condition</li>
+              <li>Collect information from PLCs and display them on a supervision screen</li>
+            </ul>
+            <p><strong>Achievements</strong></p>
+            <ul>
+              <li>Programmed the ﬁll valve process on STEP7</li>
+              <li>Realized a supervision solution via WinCC Flexible</li>
+              <li>Established communication with the PLC via PROFIBUS DP</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">February 2017 - July 2017</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Assistant Project Manager</h3>
+            <div class="subheading mb-3">Systra</div>
+            <p>Casablanca Tramway Project Line 2 & Line 1 Extension, Morocco Project Management: Coordination of the Design Review / Approval Process</p>
+            <p><strong>Responsibilities</strong></p>
+            <ul>
+              <li>Assisted the PM in the realization of the Railway Signaling contract with a global amount of 4 435 977,57€</li>
+              <li>Assisted the PM in the realization of the Overhead Contact Line Power Supply contract with a global amount of 4 067 437,86€</li>
+              <li>Assisted the PM in the realization of the Station Furniture’s installation with a global amount of 4 183 434,39€</li>
+            </ul>
+            <p><strong>Achievements</strong></p>
+            <ul>
+              <li>Prepared weekly project progression updates, and analyzed tender contracts</li>
+              <li>Support the project manager taking minutes, collecting information, preparing and delivering tenders</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2016 - September 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Project Planner</h3>
+            <div class="subheading mb-3">K.G.E</div>
+            <p>Renewal and maintenance of the railway overhead catenary systems between Mssaada and Sidi Kacem,  and the electriﬁcation of Berrechid’s train station.</p>
+            <p><strong>Achievements</strong></p>
+            <ul>
+              <li>Developed project plan and schedules using MS Project, setting milestones and timelines with the expected deliverables</li>
+              <li>Reviewed and updated project schedules and expense reports</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">July 2014 - August 2014</span>
           </div>
         </div>
 
@@ -149,7 +219,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">National School of Applied Sciences of Oujda</h3>
+            <h3 class="mb-0">National School of Applied Sciences of Oujda - Morocco</h3>
             <div class="subheading mb-3">Master's Degree</div>
             <div>Electronic Systems and Industrial IT</div>
           </div>
@@ -158,16 +228,16 @@
           </div>
         </div>
 
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
+            <h3 class="mb-0">MOOC Project Management</h3>
+            <div class="subheading mb-3">Unow - Ecole Centrale de Lille</div>
             <p>GPA: 3.56</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">March 2016 - May 2016</span>
           </div>
-        </div>-->
+        </div>
 
       </div>
     </section>
@@ -190,7 +260,7 @@
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fab fa-android"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
@@ -199,22 +269,10 @@
             <i class="fab fa-node-js"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <i class="fab fa-java"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
           </li>
         </ul>
 
