--- a/index.html
+++ b/index.html
@@ -232,10 +232,29 @@
           <div class="resume-content">
             <h3 class="mb-0">MOOC Project Management</h3>
             <div class="subheading mb-3">Unow - Ecole Centrale de Lille</div>
-            <p>GPA: 3.56</p>
+            <p><strong>Acquired Skills:</strong></p>
+            <ul>
+              <li>Management fundamentals and projects organization</li>
+              <li>Collaborative work tools on internet, project ﬁnancial evaluation</li>
+              <li>Negotiate objectives, manage meetings, establish reports, deﬁne and assign tasks</li>
+              <li>Project management advanced tools: conception, planning, budget</li>
+              <li>Creativity management, brainstorming and risk management approach</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2016 - May 2016</span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Android Development Program</h3>
+            <div class="subheading mb-3">Udacity</div>
+            <p> Android Basics with Java by Google</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2018 - November 2018</span>
           </div>
         </div>
 
@@ -312,30 +331,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Adobe Certiﬁed Training - Illustrator CC 2019 Master Class</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Web Development - Astrolabs Certification</li>
         </ul>
       </div>
     </section>
