--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#otheractivities">Other Activities</a>
+          </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#languages">Languages</a>
+          </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
@@ -69,7 +75,7 @@
         <div class="subheading mb-5">Arabian Ranches 1, Palmera 3, Street 2 Villa 2 · DUBAÏ · (058) 515-7693 ·
           <a href="mailto:wassim.bouchiha@gmail.com">wassim.bouchiha@gmail.com</a>
         </div>
-        <p class="lead mb-5">Master’s Degree in Electronic Systems and Industrial IT graduate with experience in Infrastructure (Power and Railways). Creative and resourceful Engineer, with interest and knowledge in substations, power systems, HV/MV switchgear, electrical distribution and management of railways projects. Work closely with other team members in a multi-discipline project delivery environment.</p>
+        <p class="lead mb-5">Experience in Infrastructure (Railways and Power). Creative and resourceful Engineer, with interest and knowledge in substations, power systems, high voltage, medium voltage switchgear, electrical distribution and management of railways projects. Hands on experience and knowledge of HMI & PLC programming, Web and Mobile application development.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/wassim-bouchiha" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -263,6 +269,71 @@
 
     <hr class="m-0">
 
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="otheractivities">
+      <div class="w-100">
+        <h2 class="mb-5">Other Activities</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Co-Founder of AIESEC’s local committee in Oujda and Vice-President of the Outgoing Global Volunteer</h3>
+            <div class="subheading mb-3">AIESEC (NGO)</div>
+            <p><strong>Achievements:</strong></p>
+            <ul class="fa-ul mb-0">
+              <li><i class="fa-li fa fa-check"></i>
+                Facilitated voluntary projects abroad for local students</li>
+              <li><i class="fa-li fa fa-check"></i>
+                Interviewed and selected candidates for global volunteer programs</li>
+              <li><i class="fa-li fa fa-check"></i>
+                Helped candidates solving problems and made sure they had valuable leadership experience</li>
+              <li><i class="fa-li fa fa-check"></i>
+                Coordinated the team, tracked, motivated and supported its members and provided leadership</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2016 - January 2017</span>
+          <div><span class="text-primary">Oujda - Morocco</span></div>
+        </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
+              <h3 class="mb-0">Investigator / Surveyor (Volunteer)</h3>
+              <div class="subheading mb-3">Care International Association</div>
+              <p>Evaluation and Capitalization of the «Economic & Social empowerment of vulnerable women in the Oriental Regions of Morocco» project.</p>
+              <p><strong>Achievements:</strong></p>
+              <ul class="fa-ul mb-0">
+                <li><i class="fa-li fa fa-check"></i>
+                  Lead surveys on income-generating activities of the villagers</li>
+              </ul>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">October 2016</span>
+            <div><span class="text-primary">Oriental Region - Morocco</span></div>
+          </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">Volunteer Teacher</h3>
+                <div class="subheading mb-3">AIESEC</div>
+                <p><strong>Achievements:</strong></p>
+                <ul class="fa-ul mb-0">
+                  <li><i class="fa-li fa fa-check"></i>
+                    Taught English to kids</li>
+                    <li><i class="fa-li fa fa-check"></i>
+                      Controlled homework</li>
+                      <li><i class="fa-li fa fa-check"></i>
+                        Culture exchange</li>
+                </ul>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">July 2015 - September 2015</span>
+                <div><span class="text-primary">Sao Paulo - Brazil</span></div>
+              </div>
+            </div>
+
+    <hr class="m-0">
+
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
@@ -290,28 +361,44 @@
           <li class="list-inline-item">
             <i class="fab fa-java"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Automation</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            PLC Programming (AB, Siemens), HMI</li>
+        </ul>
+
+        <p>
+        <div class="subheading mb-3">Network</div>
+        <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            ModBus, ProfiBus, Ethernet, OSI, TCP/IP</li>
+        </ul>
+      </p>
+
+      <div class="subheading mb-3">Desktop</div>
+        <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            MS Project, Excel, MS Access</li>
         </ul>
       </div>
     </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="languages">
+      <div class="w-100">
+        <h2 class="mb-5">Languages</h2>
+        <p><strong>English:</strong> Fluent</p>
+        <p><strong>French:</strong> Bilingual</p>
+        <p><strong>Arabic:</strong> Mother Tongue</p>
+      </div>
+    </section>
+
 
     <hr class="m-0">
 
@@ -334,7 +421,10 @@
             Adobe Certiﬁed Training - Illustrator CC 2019 Master Class</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Web Development - Astrolabs Certification</li>
+            Coding Bootcamp - Astrolabs Certification</li>
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Test of English for International Communication (TOEIC 830) - AMIDEAST Certification</li>
         </ul>
       </div>
     </section>
